@@ -421,6 +421,10 @@
 			
 			$iso['month'] = str_pad($iso['month'], 2, 0, STR_PAD_LEFT);
 			$iso['day'] = str_pad($iso['day'], 2, 0, STR_PAD_LEFT);
+			
+			if (strlen($iso['year'])<4) {
+				$iso['year'] = 2 . str_pad($iso['year'], 3, 0, STR_PAD_LEFT);
+			}
 
 	        if (defined('P4A_DATETIME') and ($output_format == P4A_DATETIME)) {
 	        	return "{$iso['year']}-{$iso['month']}-{$iso['day']} {$iso['hour']}:{$iso['minute']}:{$iso['second']}";
